# dist-comm-vis

./: .cspell.json  .gitignore  .releaserc.yml  .renovaterc.json  .yamllint.yml  CODEOWNERS  CONTRIBUTION.md  LICENSE  README.md  logging.ini  lombok.config  model-my-project.dot  model-my-project.json  model.json  pom.xml  pyproject.toml  setup.cfg
.config/: cspell.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: feature-branch.yml  java-pr.yml  linter.yml  pull-request.yml  release.yml  renovate-auto-approve.yml  slash-ops-command-help.yml  slash-ops-comment-dispatch.yml  spelling.yml  welcome-message.yml
.release/: package-lock.json  package.json  prepare-release.sh
analyzer/: pom.xml
combiner/: pom.xml
distributed-projects/microservice-a/: pom.xml
distributed-projects/microservice-b/: pom.xml
scripts/: model-1.dot  model-1.json  model-12.dot  model-12.json  scan.sh
src/dist_comm_vis/: definitions.py
src/dist_comm_vis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/dist_comm_vis/adapter/: configuration.py  unit_of_work.py
src/dist_comm_vis/adapter/endpoint/: cli.py
src/dist_comm_vis/application/: ModelGeneratorApplication.py  ModelVisualizerApplication.py  ServiceModel.py  create_service_model.py  service_model.py
tests/: log.json
tests/data/service_model/: Class1.java
tests/dist_comm_vis/: base_test_methods.py
tests/dist_comm_vis/adapter/: test_abstract_unit_of_work.py  test_unit_of_work.py
tests/dist_comm_vis/application/: test_model_generator_application.py  test_service_model.py
(+162 files in other folders)
