[metadata]
# the version is overwritten by the pipeline
name = dist_comm_vis
version = 1.0.0
author = Hapag-Lloyd AG
author_email = info.de@hlag.com
description = Analyzes source code for special comments to visualize dependencies between services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hapag-Lloyd/dist-comm-vis
project_urls =
    Bug Tracker = https://github.com/Hapag-Lloyd/dist-comm-vis/issues
    repository = https://github.com/Hapag-Lloyd/dist-comm-vis/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    dependency-injector==4.41.0
    python-json-logger==2.0.7

[options.extras_require]
pipeline =
    ruff==0.0.263

test =
    pytest==7.3.1
    pytest-cov==4.1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dist-comm-vis = dist_comm_vis.adapter.endpoint.cli:bootstrap
